Lagd layout site 1´s og første slides site 1. eksempel. IDE: legge til JS pil navigering (onclick)

--- a/FinalProjectExample/src/index.html
+++ b/FinalProjectExample/src/index.html
@@ -97,9 +97,20 @@
                 <li class="siteMenuLi description 2"> <a href="#challengeSite2"> Description </a> </li>
                 <li class="siteMenuLi visibility 3"> <a href="#challengeSite3"> Visibility in Society </a></li>
             </ul>
+            
+            <!--Image site 3-->
+            <img class="pollutedImgSite3" src="Images/polluted_city.jpeg" alt="Polluted City" >
+
+            <!--Text box-->
+            <div class="challengeSite2Description">
+                <span class="site2DescHeadline">Visibility in Society</span>
+                    <p class="site2DescInfo">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dignissim metus nec faucibus venenatis. Maecenas ligula sapien, eleifend a pretium ut, vestibulum sed velit. Maecenas mattis accumsan nunc, sit amet consectetur metus. Integer sed erat neque. Aliquam eleifend velit id dui varius, eget blandit mi lacinia. Donec id consectetur odio, nec vulputate mauris. Morbi id bibendum velit. Mauris hendrerit porta ligula, vitae auctor tortor maximus a. Ut tincidunt, ipsum sed ultricies viverra, neque eros dictum diam, et bibendum dolor nibh sed ipsum. Nam aliquet mauris quam, at fermentum odio viverra vitae. Cras fringilla augue id neque pretium porttitor.
+<br>
+                        Curabitur aliquam sem turpis. Nulla sem nulla, varius porttitor lacus suscipit, pulvinar maximus lectus. Donec at augue orci. Proin non finibus orci. Donec dignissim massa ut convallis laoreet. Phasellus et risus at augue egestas imperdiet sed eu felis. Donec felis velit, pretium et tristique ut, dapibus vel ligula. Phasellus luctus, elit nec.
+                    </p>
+            </div>
         </div>
-
-
 
     </div>
 
@@ -113,8 +124,23 @@
         <ul class="SiteMenu">
             <li class="siteMenuLi intro"> <a href="#solutionSite1"> Intro </a> </li>
             <li class="siteMenuLi description"> <a href="#solutionSite2"> Description </a> </li>
-            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> Visibility in Society </a></li>
+            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> x </a></li>
         </ul>
+
+
+        <!--Text-box on site-->
+        <span class="infoTextChallenge">
+
+            <i class="infoTextHeadline">Solution Intro</i>
+
+                <p class="infoText">
+                    Inspirerende Motiverende Innovasjon InspirerendeMotiverende Innovasjon Inspirerende MotiverendeInnovasjonInspirerende MotiverendeInnovasjon Inspirerende Motiverende InnovasjonInspirerendeMotiverende Innovasjon
+                </p>
+        </span>
+
+
+        <!--Image down right-->
+        <img class="solutionBulb" src="Images/ligtbulb.jpeg" alt="Light Bulb">
 
     </div>
 
@@ -124,7 +150,7 @@
         <ul class="SiteMenu">
             <li class="siteMenuLi intro"> <a href="#solutionSite1"> Intro </a> </li>
             <li class="siteMenuLi description"> <a href="#solutionSite2"> Description </a> </li>
-            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> Visibility in Society </a></li>
+            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> x </a></li>
         </ul>
     </div>
 
@@ -134,7 +160,7 @@
         <ul class="SiteMenu">
             <li class="siteMenuLi intro"> <a href="#solutionSite1"> Intro </a> </li>
             <li class="siteMenuLi description"> <a href="#solutionSite2"> Description </a> </li>
-            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> Visibility in Society </a></li>
+            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> x </a></li>
         </ul>
     </div>
 </div>
@@ -148,8 +174,20 @@
         <ul class="SiteMenu">
             <li class="siteMenuLi intro"> <a href="#appSite1"> Intro </a> </li>
             <li class="siteMenuLi description"> <a href="#appSite2"> Description </a> </li>
-            <li class="siteMenuLi visibility"> <a href="#appSite3"> Visibility in Society </a></li>
+            <li class="siteMenuLi visibility"> <a href="#appSite3"> x </a></li>
         </ul>
+
+        <!--Text-box on site-->
+        <span class="infoTextChallenge">
+
+            <i class="infoTextHeadline">App Intro</i>
+
+                <p class="infoText">
+                    Inspirerende Motiverende Innovasjon InspirerendeMotiverende Innovasjon Inspirerende MotiverendeInnovasjonInspirerende MotiverendeInnovasjon Inspirerende Motiverende InnovasjonInspirerendeMotiverende Innovasjon
+                </p>
+        </span>
+
+        <img class="appImg" src="Images/appImg.jpeg" alt="App Site1">
 
     </div>
 
@@ -159,7 +197,7 @@
         <ul class="SiteMenu">
             <li class="siteMenuLi intro"> <a href="#appSite1"> Intro </a> </li>
             <li class="siteMenuLi description"> <a href="#appSite2"> Description </a> </li>
-            <li class="siteMenuLi visibility"> <a href="#appSite3"> Visibility in Society </a></li>
+            <li class="siteMenuLi visibility"> <a href="#appSite3"> x </a></li>
         </ul>
     </div>
 
@@ -169,7 +207,7 @@
         <ul class="SiteMenu">
             <li class="siteMenuLi intro"> <a href="#appSite1"> Intro </a> </li>
             <li class="siteMenuLi description"> <a href="#appSite2"> Description </a> </li>
-            <li class="siteMenuLi visibility"> <a href="#appSite3"> Visibility in Society </a></li>
+            <li class="siteMenuLi visibility"> <a href="#appSite3"> x </a></li>
         </ul>
     </div>
 
