Spørs om detta blir riktig da.

--- a/FinalProjectExample/src/index.html
+++ b/FinalProjectExample/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Final Project Example</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
 </head>
 <body>
 <!--HEADER-->
@@ -211,7 +210,11 @@
         </ul>
     </div>
 
-
 </div>
+
+
+<!--Plasseres nederst for å laste inn side først-->
+<script src="index.js"></script>
+
 </body>
 </html>
