Gjort endringer til innlevering

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -23,10 +23,10 @@ INNOVATE.<br>
     </i>
     <!--Meny listen nederst--->
     <ul class="infoMeny">
-        <li class="infoMenyPunkt"> <a class="- fas fa-info"><span class="skjulTekst">REQUEST INFO</span></a> </li>
-        <li class="infoMenyPunkt"> <a class="- fas fa-phone"><span class="skjulTekst">(800)658-5744</span></a> </li>
-        <li class="infoMenyPunkt"> <a class="- fas fa-paper-plane"><span class="skjulTekst">APPLY AT UAT</span></a> </li>
-            <li class="infoMenyPunkt1"> <a class="- fas fa-bars"><span class="skjulTekst">MENU</span></a> </li>
+        <li class="infoMenyPunkt"> <a class="- 1 fas fa-info"><span class="skjulTekst1">REQUEST INFO</span></a> </li>
+        <li class="infoMenyPunkt"> <a class="- 2 fas fa-phone"><span class="skjulTekst2">(800)658-5744</span></a> </li>
+        <li class="infoMenyPunkt"> <a class="- 3 fas fa-paper-plane"><span class="skjulTekst3">APPLY AT UAT</span></a> </li>
+            <li class="infoMenyPunkt1"> <a class="- 4 fas fa-bars"><span class="skjulTekst4">MENU</span></a> </li>
     </ul>
 
 </div>
@@ -38,9 +38,6 @@ INNOVATE.<br>
 
  <!--Hovedside nr 1-->
     <div class="sideSlide1">
-
-<!--Pil for scroll høyre-->
-        <div class="arrowRight" onclick="rightScroll()"><i class="slide fas fa-arrow-right"></i></div>
 
 <!--Bakgrunns-bilde-->
             <img class="img1" alt="bakgrunnsbilde" src="Images/backgroundSlide3.jpeg">
@@ -142,10 +139,6 @@ INNOVATE.<br>
 
 <!--Hovedside nr 2-->
     <div class="sideSlide2">
-<!--Pil for scroll høyre og venstre--->
-        <div class="arrowRight1" onclick="rightScroll1()"><i class="slide fas fa-arrow-right"></i></div>
-        <div class="arrowLeft" onclick="leftScroll()"><i class="slide fas fa-arrow-left"></i></div>
-
 <!--DIV som inneholder side-overskriften-->
         <div class="sideOverskrift">
             <span class="sideOverskriftContainer">
@@ -248,20 +241,12 @@ INNOVATE.<br>
                     </div>
                 </div>
         </div>
-
-<!--DIV som inneholder sidebildet-->
-        <div class="slide2sideBildet">
-            <img class="slide2pic" src="Images/slide2SidePic.jpg" alt="side 2 slide">
-        </div>
     </div>
 
 <!----------------------------------------------------------------------------------->
 
 <!--Hovedside nr 3-->
     <div class="sideSlide3">
-<!--Pil for scroll venstre--->
-        <div class="arrowLeft1" onclick="leftScroll1()"><i class="slide fas fa-arrow-left"></i></div>
-
 <!--DIV for slagord siste side-->
         <div class="slagOrdSlide3">
             <i class="shapeTomo">Shaping tomorrow.</i><br>
@@ -300,11 +285,6 @@ INNOVATE.<br>
 <!--DIV men høyreside oversikts-meny-->
     <div class="slide3MenyContainer">
 
-<!--SPAN med FOLLOW US og PIL til sosiale medier-->
-        <span class="followUs">
-            Follow us <i class="fas fa-arrow-down"></i>
-        </span>
-
 <!--DIV med sosiale medier-->
         <div class="sosialeMedier">
             <i class="sosMed fab fa-facebook"></i>
@@ -318,30 +298,6 @@ INNOVATE.<br>
 
         <div class="slide3Meny">
                 <img src="Images/UAT_logo.png" class="slide3menyLogo" alt="logo">
-
-            <ul class="ulMenyInfo">
-                <li class="ulMeny3punk1">2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
-                <li class="ulMeny3punk1">(800) 658-5744</li>
-            </ul>
-
-            <ul class="ulMeny3">
-                    <li class="slide3menyPunkt">Degrees</li>
-                    <li class="slide3menyPunkt">Admission</li>
-                    <li class="slide3menyPunkt">Academics</li>
-                    <li class="slide3menyPunkt">Student Experience</li>
-                    <li class="slide3menyPunkt">About UAT</li>
-                    <li class="slide3menyPunkt">News & Events</li>
-                    <li class="slide3menyPunkt">Careers</li>
-                    <li class="slide3menyPunkt">Apply</li>
-                    <li class="slide3menyPunkt">Request Info</li>
-            </ul>
-
-        <span class="slide3menyBunn">
-            &copy;2020 University of Advancing Technology
-            All Rights Reserved
-            Online Brand by FabCom
-        </span>
-
         </div>
     </div>
 </div>
